--- a/erasmus/src/erasmus/communication/templates/communication/detail-post.html
+++ b/erasmus/src/erasmus/communication/templates/communication/detail-post.html
@@ -18,7 +18,7 @@
             </div>
 
             <div class="bottom-forum" >
-                <div class="forum-title">
+                <div class="forum-title" style="border: solid 2px black">
                       {% if response.user.student %}
                      <a href="../../profile/{{post.user.student.pk}}"><img src="../../static/user.png" alt="user" class="reply-user-photo"></a>
                       {%endif%}
@@ -37,11 +37,11 @@
                     </div>
                 </div>
                 <div class="forum-reply-content" id="forum-reply-content">
-                    <div id="reply-container">
-                        <form method="post" enctype="multipart/form-data">
-                            {% csrf_token %}
+                    <div >
+                        <form id="new-reply-container" method="post" enctype="multipart/form-data">
+                            {%                                             csrf_token %}
                             {{response_form|crispy}}
-                            <button style="width: 80px; height: 40px;" class="btn btn-primary my-4" type="submit">Submit</button>
+                            <button style="width: 120px; height: 40px;" class="btn btn-primary my-4" type="submit">Add Response</button>
                         </form>
 
                     </div>
@@ -49,8 +49,8 @@
 
                  {% for response in responses %}
                 <tr >
-                    <div style="display: flex">
-                        <div style="width: 90%" class="single-reply-content">
+                    <div style="width: 100%">
+                        <div style="width: 97%; " class="single-reply-content">
                              {% if response.user.student %}
                             <a href="../../profile/{{response.user.student.pk}}">
                                 {%endif%}
@@ -61,15 +61,16 @@
                                 <p > {{response.user.name}}: {{response.date}}</p>
                                 {{response.text}}
                             </div>
-                        </div>
-                        {% if forum_user.user.name == response.user.name %}
-                        <div>
+                            {% if forum_user.user.name == response.user.name %}
+                        <div style="padding-right: 0px">
 
                             <a href="../../delete-response/{{response.pk}}">
-                                <input type="submit" value="delete" style="width: 100px; height:40px; background-color:red;">
+                                <input type="submit" value="delete" id="rebtn" >
                             </a>
                         </div>
                           {%endif%}
+                        </div>
+
                     </div>
                 </tr>
                 {%endfor%}
