--- a/erasmus/src/erasmus/communication/templates/communication/faq.html
+++ b/erasmus/src/erasmus/communication/templates/communication/faq.html
@@ -13,7 +13,7 @@
 {% block page_content %}
 <div class="page_content" style="margin-top: 25px;">
 
-    <ol class="faq">
+    <ol class="faq" style="width: 98%">
         {% for q in questions %}
         <li style="font-weight: bold;">{{q.question}}</li>
         <p style="margin-bottom: 20px;">{{q.answer}}</p><br>
@@ -23,6 +23,7 @@
             <button type="button" class="far fa-trash-alt" style="border: none;
                                             " onclick="location.href = '/delete-question/{{q.pk}}'"></button>
         </div>
+
         {% endif %}
         {% endfor %}
     </ol>
