--- a/erasmus/src/erasmus/accounts/templates/accounts/student_list.html
+++ b/erasmus/src/erasmus/accounts/templates/accounts/student_list.html
@@ -7,7 +7,9 @@
 
 {% block page_content %}
 <div class="page_content">
-    <table style="table-layout:fixed; width: 100%">
+    <input type="text" id="filter_input" onkeyup="filterStudentTable()" style="width:100%" placeholder="Search for students...">
+
+    <table id="filtered_list" style="table-layout:fixed; width: 100%">
         <thead>
             <tr>
                 <th style="width:20%">Name</th>
