--- a/erasmus/src/erasmus/courses/templates/courses/documents.html
+++ b/erasmus/src/erasmus/courses/templates/courses/documents.html
@@ -16,13 +16,13 @@
             <table id="filtered_list" style="width:100%">
                 <thead>
                 <tr>
-                    <th style="width:65px" id="count"></th>
-                    <th style="width:175px">Type</th>
-                    <th style="width:350px">Name</th>
-                    <th style="width:350px">Is signed by coordinator?</th>
-                    <th style="width:300px">Date</th>
-                    <th style="width:25px">File format</th>
-                    <th style="width:350px" colspan="2">Operations</th>
+                    <th style="width:6%" id="count"></th>
+                    <th style="width:17%">Type</th>
+                    <th style="width:15%">Name</th>
+                    <th style="width:15%">Is signed by coordinator?</th>
+                    <th style="width:15%">Date</th>
+                    <th style="width:12%">File format</th>
+                    <th style="width:20%" colspan="2">Operations</th>
                 </tr>
                 </thead>
                 <tbody>
