--- a/erasmus/src/erasmus/accounts/templates/accounts/student_profile.html
+++ b/erasmus/src/erasmus/accounts/templates/accounts/student_profile.html
@@ -8,9 +8,6 @@
 
 {% block header_content %}
 <div class="header" style="margin-bottom: 20px;"><i class="fa fa-user"></i>{{student.user.name}}
-    <div class="header_buttons">
-        <button type="button" onclick="location.href = '#'">Message</button>
-    </div>
 </div>
 {% endblock %}
 
@@ -232,8 +229,8 @@
                         <td style="width:175px">{{document.document_name}}</td>
                         <td style="width:200px">{{document.date}}</td>
                         <td style="width:350px;">
-                            <button href="#" type="button">View</button>
                             <a class="button" href="{{document.document.url}}" download="{{document.document.url}}">Download</a>
+                            <a class="button" href="/delete-document/{{document.pk}}">Delete</a>
                         </td>
                     </tr>
                     {%endfor%}
