--- a/erasmus/src/erasmus/courses/templates/courses/courses.html
+++ b/erasmus/src/erasmus/courses/templates/courses/courses.html
@@ -119,7 +119,7 @@
             </table>
         </div>
         <div style="padding: 0; display: flex; justify-content: right;">
-            <a style="margin-right: 20px; margin-left: auto;" class="final-list" href="#">Submit Final List</a>
+            <a style="margin-right: 20px; margin-left: auto;" class="final-list" href="../../submit-course-list/">Submit Final List</a>
         </div>
     </div>
     <div class="add_course">
