--- a/erasmus/src/erasmus/courses/templates/courses/waiting_courses.html
+++ b/erasmus/src/erasmus/courses/templates/courses/waiting_courses.html
@@ -44,21 +44,22 @@
                     <td><a href="/reject-course/{{user_course.course.pk}}"><i class="fa fa-times"></i></a></td>
                 </tr>
                 {%endfor%}
-                {% for user_course in unapproved_final_list_students %}
-                <tr>
-                    <td><a>{{user_course.user.user.name}}</a></td>
-                    <td><a>{{user_course.user.university}}</a></td>
-                    <td><a>Final course list waiting for approval</a></td>
-                    <td><a href="../../profile/{{user_course.user.pk}}"><i class="fas fa-external-link-alt"></i></a></td>
-                    <td><a href="/approve-course/{{user_course.course.pk}}"><i class="fa fa-check"></i></a></td>
-                    <td><a href="/reject-course/{{user_course.course.pk}}"><i class="fa fa-times"></i></a></td>
-                </tr>
-                {%endfor%}
                 {% else %}
                 <tr>
                     <td colspan="6">No waiting courses yet</td>
                 </tr>
                 {% endif %}
+
+                {% for student in unapproved_final_list_students %}
+                <tr>
+                    <td><a>{{student.user.name}}</a></td>
+                    <td><a>{{student.user.university}}</a></td>
+                    <td><a>Final course list waiting for approval</a></td>
+                    <td><a href="../../profile/{{student.user.pk}}"><i class="fas fa-external-link-alt"></i></a></td>
+                    <td><a href="/approve-course-list/{{student.pk}}"><i class="fa fa-check"></i></a></td>
+                    <td><a href="/approve-course-list/{{student.pk}}"><i class="fa fa-times"></i></a></td>
+                </tr>
+                {%endfor%}
                 </tbody>
             </table>
         </div>
