--- a/erasmus/src/erasmus/accounts/templates/accounts/student_profile.html
+++ b/erasmus/src/erasmus/accounts/templates/accounts/student_profile.html
@@ -193,10 +193,12 @@
                         {%endfor%}
                     </tbody>
                 </table>
+                {% if True %}
                 <div style="padding: 0; display: flex; justify-content: right;">
                     <a style="margin-right: 20px; margin-left: auto;" class="final-list" href="#">Approve Final List</a>
                     <a style="background-color: #db1430;" class="final-list" href="#">Reject Final List</a>
                 </div>
+                {% endif %}
             </div>
 
             <div>
