Courses bug fix

--- a/erasmus/src/erasmus/courses/templates/courses/courses.html
+++ b/erasmus/src/erasmus/courses/templates/courses/courses.html
@@ -104,6 +104,7 @@
                         <a class="button" href="/remove-from-courses/{{courseKey.pk}}">Remove</a>
                     </td>
                     {% endif %}
+                    {% endif %}
                 </tr>
                 {% endfor %}
                 {% endfor %}
