--- a/erasmus/src/erasmus/accounts/templates/accounts/student_profile.html
+++ b/erasmus/src/erasmus/accounts/templates/accounts/student_profile.html
@@ -145,7 +145,7 @@
                                     {% endif %}
                                     {% if course.syllabus %}
                                     <div style="display: flex;";>
-                                        <a class="button" href="course.syllabus">View Syllabus</a>
+                                        <a class="button" href="//{{course.syllabus}}">View Syllabus</a>
                                     </div>
                                     {% endif %}
 
