waiting course student prof link fix & student prof mobility period fix

--- a/erasmus/src/erasmus/accounts/templates/accounts/student_profile.html
+++ b/erasmus/src/erasmus/accounts/templates/accounts/student_profile.html
@@ -77,7 +77,7 @@
                 </tr>
                 <tr>
                     <td>University/Mobility Period</td>
-                    <td>NULL</td>
+                    <td>{{student.university}}/{{student.academic_year}}</td>
                 </tr>
                 <tr>
                     <td>Status</td>
