--- a/erasmus/src/erasmus/courses/templates/courses/waiting_courses.html
+++ b/erasmus/src/erasmus/courses/templates/courses/waiting_courses.html
@@ -49,7 +49,7 @@
                     <td><a>{{student.user.name}}</a></td>
                     <td><a>{{student.university}}</a></td>
                     <td><a>Final course list waiting for approval</a></td>
-                    <td><a href="../../profile/{{student.user.pk}}"><i class="fas fa-external-link-alt"></i></a></td>
+                    <td><a href="../../profile/{{student.pk}}"><i class="fas fa-external-link-alt"></i></a></td>
                     <td><a href="/approve-course-list/{{student.pk}}"><i class="fa fa-check"></i></a></td>
                     <td><a href="/approve-course-list/{{student.pk}}"><i class="fa fa-times"></i></a></td>
                 </tr>
