--- a/erasmus/src/erasmus/accounts/templates/accounts/student_profile.html
+++ b/erasmus/src/erasmus/accounts/templates/accounts/student_profile.html
@@ -197,8 +197,8 @@
                 </table>
                 {% if student.final_list_submitted %}
                 <div style="padding: 0; display: flex; justify-content: right;">
-                    <a style="margin-right: 20px; margin-left: auto;" class="final-list" href="approve-course-list/{{student.pk}}/">Approve Final List</a>
-                    <a style="background-color: #db1430;" class="final-list" href="reject-course-list{{student.pk}}/">Reject Final List</a>
+                    <a style="margin-right: 20px; margin-left: auto;" class="final-list" href="../../approve-course-list/{{student.pk}}">Approve Final List</a>
+                    <a style="background-color: #db1430;" class="final-list" href="../../reject-course-list{{student.pk}}">Reject Final List</a>
                 </div>
                 {% endif %}
             </div>
