--- a/erasmus/src/erasmus/accounts/templates/accounts/student_profile.html
+++ b/erasmus/src/erasmus/accounts/templates/accounts/student_profile.html
@@ -95,7 +95,7 @@
                 {% if student.final_list_approved %}
                 <div class="info-message" style="background-color: #fcf8e3; border: 1px solid #faeed2; display: flex">
                 <div style="font-weight: bold; color: #8d6d3b;">Info:</div>
-                <div style="color: #8d6d3b;">This student's course are finalized.</div>
+                <div style="color: #8d6d3b;">This student's courses are finalized.</div>
                 </div>
                 {% endif %}
                 <table class="course-table" style="width: 100%">
