--- a/erasmus/src/erasmus/communication/templates/communication/notifications.html
+++ b/erasmus/src/erasmus/communication/templates/communication/notifications.html
@@ -15,10 +15,14 @@
 <div class="page_content">
     <div id="notif_table">
             <table id="filtered_list" style="width:100%">
+                <thead>
+                    <td style="width: 10%"><a>Date</a></td>
+                </thead>
                 <tbody>
                 {% for notif in flagged_notifications %}
                 <tr bgcolor= "#FFBAAB">
-                    <td style="width:100%"><a href=#>{{notif.header}}</a></td>
+                    <td style="width: 10%"><a>{{notif.date}}</a></td>
+                    <td><a href=#>{{notif.header}}</a></td>
                     <td>
                         <a href='/flag-notification/{{notif.pk}}/0/'><img src="../../static/filled-flag-icon.png" alt="Unflag"  width="15" height="15"></a>
                     </td>
@@ -29,7 +33,8 @@
                 {%endfor%}
                 {% for notif in unflagged_notifications %}
                 <tr>
-                    <td style="width:100%"><a href=#>{{notif.header}}</a></td>
+                    <td style="width: 10%"><a>{{notif.date}}</a></td>
+                    <td><a href=#>{{notif.header}}</a></td>
                     <td>
                         <a href='/flag-notification/{{notif.pk}}/1/'><img src="../../static/flag-icon.png" alt="Flag"  width="15" height="15"></a>
                     </td>
