notifications layout change

--- a/erasmus/src/erasmus/communication/templates/communication/notifications.html
+++ b/erasmus/src/erasmus/communication/templates/communication/notifications.html
@@ -23,10 +23,10 @@
                 <tr bgcolor= "#FFBAAB">
                     <td style="width: 10%"><a>{{notif.date}}</a></td>
                     <td><a href=#>{{notif.header}}</a></td>
-                    <td>
+                    <td style="width: 5%">
                         <a href='/flag-notification/{{notif.pk}}/0/'><img src="../../static/filled-flag-icon.png" alt="Unflag"  width="15" height="15"></a>
                     </td>
-                    <td>
+                    <td style="width: 5%">
                         <a href='/delete-notification/{{notif.pk}}/'><img src="../../static/trash-icon.png" alt="Delete"  width="15" height="15"></a>
                     </td>
                 </tr>
@@ -35,10 +35,10 @@
                 <tr>
                     <td style="width: 10%"><a>{{notif.date}}</a></td>
                     <td><a href=#>{{notif.header}}</a></td>
-                    <td>
+                    <td style="width: 5%">
                         <a href='/flag-notification/{{notif.pk}}/1/'><img src="../../static/flag-icon.png" alt="Flag"  width="15" height="15"></a>
                     </td>
-                    <td>
+                    <td style="width: 5%">
                         <a href='/delete-notification/{{notif.pk}}/'><img src="../../static/trash-icon.png" alt="Delete"  width="15" height="15"></a>
                     </td>
                 </tr>
