--- a/erasmus/src/erasmus/accounts/templates/accounts/student_profile.html
+++ b/erasmus/src/erasmus/accounts/templates/accounts/student_profile.html
@@ -113,6 +113,7 @@
                     </tr>
                     </thead>
                     <tbody>
+                        {% if student_unmerged_courses or student_merged_course_dict.items %}
                         {% for course in student_unmerged_courses %}
                         <tr>
                         <td id="count"></td>
@@ -199,6 +200,11 @@
                 </tr>
                         {%endfor%}
                         {%endfor%}
+                        {% else %}
+                    <tr>
+                        <td colspan="9">No courses yet</td>
+                    </tr>
+                    {% endif %}
                     </tbody>
                 </table>
                 {% if student.final_list_submitted and not student.final_list_approved %}
@@ -231,6 +237,7 @@
                     </tr>
                     </thead>
                     <tbody>
+                    {% if documents %}
                     {% for document in documents %}
                     <tr>
                         <td style="width:65px" id="count"></td>
@@ -242,6 +249,11 @@
                         </td>
                     </tr>
                     {%endfor%}
+                    {% else %}
+                    <tr>
+                        <td colspan="5">No files yet</td>
+                    </tr>
+                    {% endif %}
                     </tbody>
                 </table>
             </div>
