--- a/erasmus/src/erasmus/courses/templates/courses/courses.html
+++ b/erasmus/src/erasmus/courses/templates/courses/courses.html
@@ -142,7 +142,7 @@
             <button type="button" onclick="location.href = '../../add-unapproved-course/'">Add New Course</button>
             <button type="button" onclick="location.href = '../../add-bilkent-course/'">Add Bilkent Equivalent Course</button>
             {% endif %}
-            <button type="button" onclick="location.href = '../../create-document/'">Create Document</button>
+            <button type="button" onclick="location.href = '../../create-document/'">Create Pre-Approval Form</button>
         </div>
 
 
