--- a/erasmus/src/erasmus/accounts/templates/accounts/student_profile.html
+++ b/erasmus/src/erasmus/accounts/templates/accounts/student_profile.html
@@ -246,6 +246,7 @@
                         <td style="width:200px">{{document.date}}</td>
                         <td style="width:350px;">
                             <a class="button" href="{{document.document.url}}" download="{{document.document.url}}">Download</a>
+                            <input type="checkbox" class="file-selection" id="{{document.user.pk}}/{{document.pk}}">
                         </td>
                     </tr>
                     {%endfor%}
@@ -256,6 +257,11 @@
                     {% endif %}
                     </tbody>
                 </table>
+                {% if documents %}
+                <div style="padding: 0; display: flex; justify-content: right;">
+                    <a style="margin-right: 20px; margin-left: auto;" class="compare-file" onclick="compareFiles()" href="#">Compare</a>
+                </div>
+                {% endif %}
             </div>
 
         </div>
