Course table name fixed

--- a/erasmus/src/erasmus/courses/templates/courses/courses.html
+++ b/erasmus/src/erasmus/courses/templates/courses/courses.html
@@ -14,12 +14,12 @@
                 <thead>
                 <tr>
                     <th style="width:4%" class="sorttable_nosort"></th>
-                    <th style="width:10%">Course Code</th>
-                    <th style="width:20%">Course Name</th>
+                    <th style="width:10%">{{student.university}} Course Code</th>
+                    <th style="width:20%">{{student.university}} Course Name</th>
                     <th style="width:7%">Credits</th>
-                    <th style="width:20%">Course Type</th>
+                    <th style="width:20%">Bilkent University Equivalent Course Type</th>
                     <th style="width:7%">Credits</th>
-                    <th style="width:20%">Course Code and Name</th>
+                    <th style="width:20%">Bilkent University Equivalent Course Code and Name</th>
                     <th style="width:10%">Status</th>
                     {% if not student.final_list_approved %}
                     <th style="width:12%" class="sorttable_nosort">Operation</th>
