--- a/erasmus/src/erasmus/courses/templates/courses/documents.html
+++ b/erasmus/src/erasmus/courses/templates/courses/documents.html
@@ -19,7 +19,7 @@
                     <th style="width:6%" id="count"></th>
                     <th style="width:17%">Type</th>
                     <th style="width:15%">Name</th>
-                    <th style="width:15%">Is signed by coordinator?</th>
+                    <th style="width:15%">Signed by coordinator?</th>
                     <th style="width:15%">Date</th>
                     <th style="width:12%">File format</th>
                     <th style="width:20%" colspan="2">Operations</th>
